   - add function for dequeuing multiple jobs
   - add a wakeup time when preparing event loop
   - add functions to get verbs of api v4
   - implement get/set of userdata for requests v4
   - allows hooking of interface queries
   - deliver a static library for libafbcli
   - allow to disable stack dump
   - provide a linker version script for extensions

  fixes
   - fix correct apiset (callset) for required features
   - fix the macros LIBAFB_BEFORE_VERSION and LIBAFB_AFTER_VERSION
   - fix issue on timer management
   - fix deprecated hooks of LIBC
   - fix definitions in afb-v4.h
   - fix expiration of afb_sched_enter and change its logic
   - fix timer used for expiration to be REALTIME_CLOCK
   - fix compiling with WITH_AFB_CALL_SYNC=OFF
   - fix timer reference (critical)
   - fix encoding of data copy
   - fix size indicator of AFBRPCv2
   - fix double close on initialisation error

  minor/details
   - fix declarations in afb-api-v4 and improved API
   - report SIGALARM instead of SIGVTALARM that is specific
   - enhance timer management
   - improve network latency by using TCP_NODELAY
   - remove use of dup for websockets on libmicrohttpd

Version 4.0.4
-------------

  features
   - REWORKED SCHEDULER
   - add new RPC support
   - rework of the afb-api for RPC
   - returning HTTP binary blobs from bindings
   - add support of specialized interface
   - add pseudo socket protocol 'char:' for being client of serial link

  fixes
   - json-locator fixes
   - fix overflow detection of afb-type
   - fix leak in afb-hreq
   - fix automatic pong response of WS
   - avoid concurrent calls to MHD_run
   - fix compatibility to old json-c
   - enforce use of default credentials
   - fix bug in afb-trace

  minors/details
   - improvements of afb-wsj1
   - cleaning afb-stub-ws
   - improve type conversion

Version 4.0.3
-------------

  features
   - add function handling event within api v4 (for extensions)

  fixes
   - add release version in pc files